--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,13 @@
   "author": "Abdelrahman",
   "license": "ISC",
   "dependencies": {
+    "connect-livereload": "^0.6.1",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "livereload": "^0.9.3",
     "mongoose": "^8.8.4"
-  }
+  },
+  "keywords": []
 }
