--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,9 @@
     "express-async-handler": "^1.2.0",
     "joi": "^17.13.3",
     "mongoose": "^8.8.4"
+  },
+    "engines": {
+    "node": ">=22.12.0",   // نسخة Node.js المطلوبة
+    "npm": ">=11.0.0"      // نسخة npm المطلوبة
   }
 }
