--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "mongoose": "^8.8.4"
   },
     "engines": {
-    "node": ">=22.12.0",   // نسخة Node.js المطلوبة
-    "npm": ">=11.0.0"      // نسخة npm المطلوبة
+    "node": ">=22.12.0",   
+    "npm": ">=11.0.0"      
   }
 }
