--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,17 @@
   "author": "Abdelrahman",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "connect-livereload": "^0.6.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.9.1"
+    "jsonwebtoken": "^9.0.2",
+    "livereload": "^0.9.3",
+    "mongoose": "^8.9.1",
+    "slugify": "^1.6.6"
   }
 }
